--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="add_voice_option">Add by voice option</string>
     <string name="add">Add</string>
     <string name="decide">Decide</string>
+    <string name="settings">Settings</string>
 
     <string name="clear">Clear</string>
     <string name="save">Save</string>
