Adding tests around mock storage, adding settings with updated button design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,9 @@
 
     <string name="decision_preference">Decision preference</string>
     <string name="decision_preference_desc">If you specified a decision type as default, the window will no longer show. This is where you can change it.</string>
+
     <string name="analytics">Analytics</string>
-    <string name="analytics_desc">Allowing me to see what parts of the app is used so I can improve it in future with extra features.</string>
+    <string name="analytics_desc">Permission to allow the developer to see what is used in the app. This makes it easier in future to know what extra features can be made depending upon features currently used.</string>
     <string name="crashalytics">Crashalytics</string>
-    <string name="crashalytics_desc">If the app crashes, a crash report will be auto sent to me so I can diagnose what happened.</string>
+    <string name="crashalytics_desc">If the app crashes, a crash report will be auto sent so the developer can diagnose what happened.</string>
 </resources>
