Swapping delete option to being a button due to confused feedback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="analytics_desc">Do you give permission to allow the developer to see what is used in the app. This makes it easier in future to know what extra features can be made depending upon features currently used.</string>
 
     <string name="delete_all_button">Delete All</string>
-    <string name="confirm_delete_desc">Are you sure you want to delete all options?\n\nTip: To remove one option, swipe the option you would like to remove</string>
+    <string name="confirm_delete_desc">Are you sure you want to delete all options?</string>
 
     <string name="add_another_desc">You have only added one option. Maybe you should add another option so it\'s a surprise.</string>
 
