Creating pick a bubble screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="how_do_you_want_to_decide">How do you want to decide?</string>
     <string name="instant_decision">Instant Decision</string>
     <string name="spin_the_wheel">Spin the wheel</string>
+    <string name="pick_a_bubble">Pick A Bubble</string>
     <string name="go">Go</string>
     <string name="continue_option">Continue</string>
     <string name="clear_all">Clear All</string>
