Adding DecisionFlowScreen to move decision logic to one central place. Adding default decision option within settings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,8 @@
     <string name="crashalytics_desc">Do you give permission to the developer to allow crash reports to be automatically sent so they can diagnose what happened.</string>
     <string name="analytics">Analytics</string>
     <string name="analytics_desc">Do you give permission to allow the developer to see what is used in the app. This makes it easier in future to know what extra features can be made depending upon features currently used.</string>
-    <string name="always_ask_decision">Always Use Default</string>
-    <string name="always_ask_decision_desc">If you no longer want the app to ask how to decide and use default below</string>
+    <string name="skip_decision_type">Skip Decision Option</string>
+    <string name="skip_decision_type_desc">If you no longer want the app to ask how to decide and use default below</string>
     <string name="decision_type">Default Decision Type</string>
 
     <string name="version_name">Version Name</string>
