--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="decision_preference">Decision preference</string>
     <string name="decision_preference_desc">If you specified a decision type as default, the window will no longer show. This is where you can change it.</string>
+    <string name="don_t_ask_me_again_text">Don\'t ask me again</string>
 
     <string name="crashalytics">Crash Reporting</string>
     <string name="crashalytics_desc">Do you give permission to the developer to allow crash reports to be automatically sent so they can diagnose what happened.</string>
